Enlarge article text size; Adjust heading margins; Fix overflow on code blocks

--- a/src/site/code.scss
+++ b/src/site/code.scss
@@ -13,6 +13,7 @@
 	padding: .2em .6em; 
 	color: black;
 	font-size: 80%;
+	overflow: scroll;
 
 	pre { margin: 0; }
 	.hll { background-color: #ffffcc; }
